Fixed footer spacing

--- a/docs/_sass/footer.scss
+++ b/docs/_sass/footer.scss
@@ -5,6 +5,7 @@
   font-size: 0.8rem;
 
 }
+
 .copyright-text {
   color: white;
   font-size: 15px;
@@ -112,7 +113,7 @@
         width: 22px;
         height: 22px;
       }
-
+ 
       &:hover svg {
         fill: #fff;
       }
@@ -289,7 +290,7 @@ footer {
   .footer-columns {
     display: flex;
     justify-content: center;
-    padding-right: 43px;
+    // padding-right: 43px;
   }
   .footer-columns2 {
     display: flex;
@@ -327,9 +328,9 @@ footer {
 }
 
 @media (min-width: 576px) {
-  .foot-container {
-    max-width: 650px !important;
-  }
+  // .foot-container {
+  //   max-width: 650px !important;
+  // }
 }
 
 @media (min-width: 769px) {
@@ -341,7 +342,7 @@ footer {
     width: 27px !important;
     height: 27px !important;
   }
-  .foot-container {
-    max-width: 800px !important;
-  }
+  // .foot-container {
+  //   max-width: 800px !important;
+  // }
 }
